fixes bad margin issues on mobileversion

--- a/style.css
+++ b/style.css
@@ -258,17 +258,8 @@ img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 }
 
 #post-view {
-	margin-left:10px;
 	width: 100%;
 	
-}
-
-@media (max-width: 700px) {
-	#post-view {
-		padding-left: 10px;
-		padding-right: 10px;
-		margin-right: 10px;
-	}
 }
 
 .card-text {
@@ -410,8 +401,10 @@ img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 
 /***********End Podcast layout*****************************/
 
-
-
+.nav-tabs-wrapper {
+    position: relative;
+	display: flex;
+}
 
 .nav {
 	margin-bottom:10px;
@@ -425,15 +418,12 @@ img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 	padding: 10px;
 	list-style: none;
 	transition: all 0.6s;
+	text-align: center;
 }
 
 .nav-tabs li:hover {
 	color: #fff;
 	background-color:#d89c44;
-}
-
-.nav-tabs{
-	margin-left: 10px;
 }
 
 .page-title{
@@ -444,7 +434,6 @@ img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 	width: 100%;
 }
 
-
 .video__wrapper {
 	width: 100%;
 	z-index:1;
@@ -452,6 +441,7 @@ img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 	max-height: 450px;
 	margin-bottom: 50px;
 }
+
 video {
 	width: 100%;
 	}
